SILGen: createWithoutActuallyEscapingClosure needs to use a substitution map in the context of the current generic enviroment

We used a substitution map derived from a thunk that might have been
created in a different function if that other function used the same
thunk type.
Instead use a substitution map that was derived from the
current functions generic environment.

rdar://41331672
SR-8064